k8s/authentication-deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: authenticationservice
  namespace: team-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authenticationservice
  template:
    metadata:
      labels:
        app: authenticationservice
    spec:
      containers:
        - name: authenticationservice
          image: jitheshmjithooz/team-sync-authentication-service
          ports:
            - containerPort: 3002
---

apiVersion: v1
kind: Service
metadata:
  name: authenticationservice
  namespace: team-sync
spec:
  ports:
    - port: 3002
      targetPort: 3002
  selector:
    app: authenticationservice
