k8s/communication-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: communicationservice
  namespace: team-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: communicationservice
  template:
    metadata:
      labels:
        app: communicationservice
    spec:
      containers:
        - name: communicationservice
          image: jitheshmjithooz/team-sync-communication-service
          ports:
            - containerPort: 3006
---

apiVersion: v1
kind: Service
metadata:
  name: communicationservice
  namespace: team-sync
spec:
  ports:
    - port: 3006
      targetPort: 3006
  selector:
    app: communicationservice
