k8s/frontend-deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: team-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: jitheshmjithooz/team-sync-frontend
          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: team-sync
spec:
  ports:
    - port: 5173
      targetPort: 5173
  selector:
    app: frontend
