k8s/kafka-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: team-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka:latest
          ports:
            - containerPort: 9092
            - containerPort: 29092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: team-sync
spec:
  type: ClusterIP
  ports:
    - name: client
      port: 9092
      targetPort: 9092
    - name: inter-broker
      port: 29092
      targetPort: 29092
  selector:
    app: kafka
