k8s/notification-deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificationservice
  namespace: team-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notificationservice
  template:
    metadata:
      labels:
        app: notificationservice
    spec:
      containers:
        - name: notificationservice
          image: jitheshmjithooz/team-sync-notification-service
          ports:
            - containerPort: 3001
---

apiVersion: v1
kind: Service
metadata:
  name: notificationservice
  namespace: team-sync
spec:
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    app: notificationservice
