k8s/project-deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: projectservice
  namespace: team-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: projectservice
  template:
    metadata:
      labels:
        app: projectservice
    spec:
      containers:
        - name: projectservice
          image: jitheshmjithooz/team-sync-project-service
          ports:
            - containerPort: 3005
---

apiVersion: v1
kind: Service
metadata:
  name: projectservice
  namespace: team-sync
spec:
  ports:
    - port: 3005
      targetPort: 3005
  selector:
    app: projectservice
