k8s/subscription-deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscriptionservice
  namespace: team-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: subscriptionservice
  template:
    metadata:
      labels:
        app: subscriptionservice
    spec:
      containers:
        - name: subscriptionservice
          image: jitheshmjithooz/team-sync-subscription-service
          ports:
            - containerPort: 3003
---

apiVersion: v1
kind: Service
metadata:
  name: subscriptionservice
  namespace: team-sync
spec:
  ports:
    - port: 3003
      targetPort: 3003
  selector:
    app: subscriptionservice
