k8s/tenant-deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tenantservice
  namespace: team-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tenantservice
  template:
    metadata:
      labels:
        app: tenantservice
    spec:
      containers:
        - name: tenantservice
          image: jitheshmjithooz/team-sync-tenant-service
          ports:
            - containerPort: 3004
---

apiVersion: v1
kind: Service
metadata:
  name: tenantservice
  namespace: team-sync
spec:
  ports:
    - port: 3004
      targetPort: 3004
  selector:
    app: tenantservice
