k8s/user-deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
  namespace: team-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: jitheshmjithooz/team-sync-user-service
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: userservice
  namespace: team-sync
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: userservice
