k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: team-sync-ingress
  namespace: team-sync
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/auth-service
        pathType: Prefix
        backend:
          service:
            name: authenticationservice
            port:
              number: 3002
      - path: /api/tenant-service
        pathType: Prefix
        backend:
          service:
            name: tenantservice
            port:
              number: 3004
      - path: /api/user-service
        pathType: Prefix
        backend:
          service:
            name: userservice
            port:
              number: 3007
      - path: /api/subscription-service
        pathType: Prefix
        backend:
          service:
            name: subscriptionservice
            port:
              number: 3003
      - path: /api/project-service
        pathType: Prefix
        backend:
          service:
            name: projectservice
            port:
              number: 3005
      - path: /api/communication-service
        pathType: Prefix
        backend:
          service:
            name: communicationservice
            port:
              number: 3006
      - path: /api/chat
        pathType: Prefix
        backend:
          service:
            name: communicationservice
            port:
              number: 3006

      - path: /socket.io
        pathType: Prefix
        backend:
          service:
            name: communicationservice
            port:
              number: 3006
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000


---

apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
    nodePort: 30443
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
